# stopping_spectral_measurements

./: .gitignore  README.md  calc_hyper_param.py  plot_animation.py  plot_example.py  plot_experimental_result.py  pyproject.toml  requirements.txt  run_example.py  run_experimental_setting.py
core/: GPR.py  active_learning.py  stopping_criteria.py
dataset/: Mn2+ 10Dq 1.000.xy
dataset/210315_xas-exp_dataset/: 210315_xas-exp_dataset.ipynb  Co_2  Co_5  MnO2_4  Ni_3  Ni_6
dataset/experiment/: Co_3  MnO2_1  MnO2_7  Ni_4
dataset/simulation/: Co2+.xy  Ni2+.xy
param/Co2+/: params.txt
param/Mn2+/: params.txt
param/Ni2+/: params.txt
param/Ni_3_exp/: params.txt
param/Ni_4_exp/: params.txt
param/Ni_6_exp/: params.txt
result/Co2+/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Co_2_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Co_3_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Co_5_exp/: X_test.txt  y_range.txt  y_test.txt
result/Mn2+/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/MnO2_1_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/MnO2_4_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/MnO2_7_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Ni2+/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Ni_3_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Ni_4_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
result/Ni_6_exp/: X_range.txt  X_test.txt  y_range.txt  y_test.txt
utils/: get_dataset.py  plot_results.py  utils.py
