[tool.poetry]
name = "stopping_spectral_measurements"
version = "0.1.0"
description = ""
authors = ["Hideaki Ishibashi <ishibashi@brain.kyutech.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sklearn = "^0.0"
tqdm = "^4.62.3"
matplotlib = "^3.5.1"
mpmath = "^1.2.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
